tests/baselines/reference/genericConstructExpressionWithoutArgs.errors.txt
tests/cases/compiler/genericConstructExpressionWithoutArgs.ts(10,1): error TS1005: '(' expected.


==== tests/cases/compiler/genericConstructExpressionWithoutArgs.ts (1 errors) ====
    class B { }
    var b = new B; // no error
     
    class C<T> {
       x: T;
    }
    
    var c = new C // C<any>
    var c2 = new C<number> // error, type params are actually part of the arg list so you need both
    
    
!!! error TS1005: '(' expected.